--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -26,7 +26,13 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # gem 'rails-api'
 gem 'active_model_serializers'
 gem 'dotenv-rails'
+gem 'bootstrap', '~> 4.0.0.alpha3'
+gem 'font-awesome-rails'
+gem 'material_icons'
 
+source 'https://rails-assets.org' do
+  gem 'rails-assets-tether', '>= 1.1.0'
+end
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
