Adding admin page (http://localhost:3000/admin)
- Manually set a user as an admin in console with attribute `is_admin=true`

--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -26,6 +26,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # gem 'rails-api'
 gem 'active_model_serializers'
 gem 'dotenv-rails'
+gem 'activeadmin', '~> 1.0.0.pre2'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
