add guest template

--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -30,6 +30,8 @@ gem 'activeadmin', '~> 1.0.0.pre2'
 gem 'bootstrap', '~> 4.0.0.alpha3'
 gem 'font-awesome-rails'
 gem 'material_icons'
+gem 'materialize-sass'
+
 gem 'rails-api', require: 'rails-api/action_controller/api'
 source 'https://rails-assets.org' do
   gem 'rails-assets-tether', '>= 1.1.0'
