add create features.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,8 +2,11 @@
   "name": "code-pieces",
   "dependencies": {
     "react": "^15.0.1",
+    "react-ace": "^3.4.0",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
+    "react-select": "^1.0.0-beta12",
     "redux": "^3.5.1"
   },
   "license": "MIT",
