--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,9 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
     "react-select": "^1.0.0-beta12",
-    "redux": "^3.5.1"
+    "redux": "^3.5.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   },
   "license": "MIT",
   "engines": {
