--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "code-pieces",
   "dependencies": {
+    "brace": "^0.8.0",
     "react": "^15.0.1",
     "react-ace": "^3.4.0",
     "react-dom": "^15.0.1",
